Add YouTube, Simplify top meny, Add Bluesky

--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@ collections:
 header_pages:
   - path: 'equipe.html'
   - path: 'concept.md'
-  - path: 'crowdcasting.md'
+  - path: 'participer.md'
   - path: 'soutenir.md'
-  - path: 'ask-me-anything.md'
   - path: 'episodes.html'
     title: 'Rechercher'
     icon: 'search'
@@ -36,10 +35,10 @@ sidebar_cards:
         icon: 'piggy-bank-fill'
         color: 'piggy-pink'
         url: 'https://www.patreon.com/LesCastCodeurs'
-      - name: 'Sondage 2024'
-        icon: 'chat-dots'
-        color: 'black'
-        url: 'https://lescastcodeurs.com/sondage'
+#      - name: 'Sondage 2024'
+#        icon: 'chat-dots'
+#        color: 'black'
+#        url: 'https://lescastcodeurs.com/sondage'
   - name: 'Syndication'
     links:
       - name: 'Liste des épisodes'
@@ -50,6 +49,10 @@ sidebar_cards:
         icon: 'rss-fill'
         color: 'rss-orange'
         url: 'https://lescastcodeurs.com/podcast-rss'
+      - name: 'YouTube'
+        icon: 'youtube'
+        color: 'youtube-red'
+        url: 'https://www.youtube.com/@lescastcodeurs'
       - name: 'iTunes'
         icon: 'music-note-beamed'
         color: 'apple-podcast-violet'
@@ -60,22 +63,27 @@ sidebar_cards:
         file: 'licence.md'
   - name: 'Contacts'
     links:
+      - name: 'lescastcodeurs.com'
+        icon: 'bluesky'
+        bluesky: true
+        color: 'twitter-blue'
+        url: 'https://bsky.app/profile/lescastcodeurs.com'
+      - name: '@lescastcodeurs'
+        icon: 'twitter-x'
+        color: 'black'
+        url: 'https://twitter.com/lescastcodeurs'
       - name: 'Ask Me Anything'
         icon: 'chat-dots'
         color: 'black'
         url: 'https://lescastcodeurs.com/ama'
-      - name: 'Email'
-        icon: 'envelope-fill'
-        color: 'black'
-        url: 'mailto:commentaire@lescastcodeurs.com'
-      - name: '@lescastcodeurs'
-        icon: 'twitter'
-        color: 'twitter-blue'
-        url: 'https://twitter.com/lescastcodeurs'
       - name: 'Crowdcast'
         icon: 'mic-fill'
         color: 'mic-grey'
         file: 'crowdcasting.md'
+      - name: 'Email'
+        icon: 'envelope-fill'
+        color: 'black'
+        url: 'mailto:commentaire@lescastcodeurs.com'
   - name: 'Discuter'
     links:
       - name: 'Google groups'
